--- a/src/components/DatePicker/DatePicker.sass
+++ b/src/components/DatePicker/DatePicker.sass
@@ -1,14 +1,12 @@
 .datepicker.container
   position: relative
+  .header
+    margin: 0
+    flex-grow: 1
+    text-align: center
+    align-self: center
   .picker
-    position: absolute
-    top: 0
-    width: auto
-    .header
-      margin: 0
-      flex-grow: 1
-      text-align: center
-      align-self: center
+    width: 23em
     th, td
       width: 2.8em
       padding: 0.5em 0.25em
@@ -24,3 +22,8 @@
       &.active
         background-color: #2185d0 !important
         color: white !important
+
+@media only screen and (max-width: 320px)
+  .picker
+    max-width: 100vw !important
+    margin-left: -1rem !important
