--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -14,6 +14,16 @@
 
 
 .datetimepicker
+  font-size: 1.2em
+  display: inline-block
+  .picker
+    position: absolute
+    z-index: 50
+    top: 0
+    margin: 0
+    width: auto
+    max-width: unset
+
   .clickable
     text-decoration: underline rgba(90,90,90,0.3)
     text-decoration-style: dotted
@@ -37,9 +47,10 @@
         margin: 0.25em
   .ui.list
     width: 100%
-    max-width: 20em
+    max-width: 15em
     &.scrolling
-      max-height: 12em
+      max-height: min(80vh, 20em)
       overflow: hidden scroll
     .item
+      background-color: white
       @extend %selectable
