added custom useClickOut and useScrollToActive hooks, cleaned up css

--- a/src/components/DatePicker/DatePicker.sass
+++ b/src/components/DatePicker/DatePicker.sass
@@ -24,6 +24,6 @@
         color: white !important
 
 @media only screen and (max-width: 320px)
-  .picker
-    max-width: 100vw !important
-    margin-left: -1rem !important
+  .datepicker
+    .picker
+      font-size: 0.9em
