--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -1,3 +1,5 @@
+$pop2: cubic-bezier(0.76,0.07,0.6,1.47)
+
 %selectable
   padding: 0.25rem 0.5rem
   color: black
@@ -16,13 +18,16 @@
 .datetimepicker
   font-size: 1.2em
   display: inline-block
+  text-align: center
   .picker
+    animation: growIn 250ms $pop2, fadeIn 500ms ease-in
+    animation-fill-mode: forwards
     position: absolute
     z-index: 50
     top: 0
     margin: 0
     width: auto
-    max-width: unset
+    max-width: calc(100vw - 2rem)
 
   .clickable
     text-decoration: underline rgba(90,90,90,0.3)
@@ -54,3 +59,22 @@
     .item
       background-color: white
       @extend %selectable
+
+.half-opacity
+  opacity: 0.5
+
+@media only screen and (max-width: 320px)
+  .picker
+    max-width: 100vw !important
+    margin-left: -1rem !important
+
+@keyframe growIn
+  from
+    transform: scale(0)
+  to
+    transform: scale(1)
+@keyframes fadeIn
+  from
+    opacity: 0    
+  to
+    opacity: 1
