--- a/src/components/DatePicker/DatePicker.sass
+++ b/src/components/DatePicker/DatePicker.sass
@@ -8,10 +8,12 @@
   .picker
     width: 23em
     th, td
-      width: 2.8em
-      padding: 0.5em 0.25em
-      text-align: center
-    td
+      padding: 0
+      .sizer
+        width: 2.8em
+        padding: 0.5em 0.25em
+        text-align: center
+    td 
       cursor: pointer
       transition: background-color 400ms, opacity 400ms
       &:hover
