--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -16,24 +16,26 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
 
 
 .datetimepicker
-  font-size: 1.2em
+  font-size: 1.2rem
   display: inline-block
   text-align: center
-  .picker
+  .picker, .picker.ui.list, .picker.ui.card
     animation: growIn 250ms $pop2, fadeIn 500ms ease-in
-    animation-fill-mode: forwards
     position: absolute
     z-index: 50
-    top: 0
+    top: 5px
     margin: 0
-    width: auto
-    max-width: calc(100vw - 2rem)
+    border-radius: 3px
+    border: 1px solid rgba(90,90,90,0.5)
+    box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
+    // width: unset
+    max-width: calc(100vw - 2rem) 
 
   .clickable
     text-decoration: underline rgba(90,90,90,0.3)
     text-decoration-style: dotted
-    text-underline-offset: 3px
-    transition: text-decoration-color 400ms
+    text-underline-offset: 0.15rem
+    transition: text-decoration-color 250ms
     cursor: pointer
     &:hover
       text-decoration-color: rgba(90,90,90,1)
@@ -51,7 +53,7 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
         width: calc(25% - 0.5em)
         margin: 0.25em
   .ui.list
-    width: 100%
+    background-color: white
     max-width: 15em
     &.scrolling
       max-height: min(80vh, 20em)
