--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -28,7 +28,6 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
     border-radius: 3px
     border: 1px solid rgba(90,90,90,0.5)
     box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
-    // width: unset
     max-width: calc(100vw - 2rem) 
 
   .clickable
@@ -61,9 +60,23 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
     .item
       background-color: white
       @extend %selectable
+      padding: 0.25rem 1.5rem
 
 .half-opacity
   opacity: 0.5
+
+.top-guard
+  top: 0 !important
+  bottom: unset !important
+.bottom-guard
+  top: unset !important
+  bottom: 0 !important
+.left-guard
+  left: 0 !important
+  right: unset !important
+.right-guard
+  left: unset !important
+  right: 0 !important
 
 @media only screen and (max-width: 320px)
   .picker
