--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -17,7 +17,7 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
 
 .datetimepicker
   font-size: 1.2rem
-  display: inline-block
+  // display: inline-block
   text-align: center
   .picker, .picker.ui.list, .picker.ui.card
     animation: growIn 250ms $pop2, fadeIn 500ms ease-in
