--- a/src/components/DateTimePicker/DateTimePicker.sass
+++ b/src/components/DateTimePicker/DateTimePicker.sass
@@ -1,15 +1,14 @@
-.datetimepicker
-  &.right
-    text-align: right
-    .picker
-      right: 0
-  &.center
-    text-align: center
-    .picker
-      left: 50%
-      transform: translateX(-50%)
-      // transform
-  &.left
-    text-align: left
-    .picker
-      left: 0
+// .datetimepicker
+  // &.right
+  //   text-align: right
+  //   .picker
+  //     right: 0
+  // &.center
+  //   text-align: center
+  //   .picker
+  //     left: 50%
+  //     transform: translateX(-50%)
+  // &.left
+  //   text-align: left
+  //   .picker
+  //     left: 0
