--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -18,8 +18,24 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
 .datetimepicker
   font-size: 1.2rem
   // display: inline-block
-  text-align: center
-  .picker, .picker.ui.list, .picker.ui.card
+  // text-align: center
+  &.right
+    text-align: right
+    .picker
+      right: 0
+  &.center
+    text-align: center
+    .picker
+      &.ui.list, &.ui.card
+        left: 50%
+        transform: translateX(-50%)
+        animation: growInCentered 250ms $pop2, fadeIn 500ms ease-in
+  &.left
+    text-align: left
+    .picker
+      left: 0  
+  .picker
+    &.ui.list, &.ui.card
     animation: growIn 250ms $pop2, fadeIn 500ms ease-in
     position: absolute
     z-index: 50
@@ -29,6 +45,9 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
     border: 1px solid rgba(90,90,90,0.5)
     box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
     max-width: calc(100vw - 2rem) 
+  &.center
+    .picker
+      animation: growInCentered 250ms $pop2, fadeIn 500ms ease-in
 
   .clickable
     text-decoration: underline rgba(90,90,90,0.3)
@@ -88,6 +107,11 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
     transform: scale(0)
   to
     transform: scale(1)
+@keyframe growInCentered
+  from
+    trasnform: scale(0), translateX(-50%)
+  to
+    transform: scale(1), translate(-50%)
 @keyframes fadeIn
   from
     opacity: 0    
