--- a/datepicker.css
+++ b/datepicker.css
@@ -17,9 +17,29 @@
 }
 .datetimepicker {
   font-size: 1.2rem;
+}
+.datetimepicker.right {
+  text-align: right;
+}
+.datetimepicker.right .picker {
+  right: 0;
+}
+.datetimepicker.center {
   text-align: center;
 }
-.datetimepicker .picker, .datetimepicker .picker.ui.list, .datetimepicker .picker.ui.card {
+.datetimepicker.center .picker.ui.list, .datetimepicker.center .picker.ui.card {
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+          animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+}
+.datetimepicker.left {
+  text-align: left;
+}
+.datetimepicker.left .picker {
+  left: 0;
+}
+.datetimepicker .picker {
   -webkit-animation: growIn 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
           animation: growIn 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
   position: absolute;
@@ -30,6 +50,10 @@
   border: 1px solid rgba(90, 90, 90, 0.5);
   box-shadow: 0px 0px 5px rgba(120, 120, 120, 0.5);
   max-width: calc(100vw - 2rem);
+}
+.datetimepicker.center .picker {
+  -webkit-animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+          animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
 }
 .datetimepicker .clickable {
   -webkit-text-decoration: underline rgba(90, 90, 90, 0.3);
@@ -105,6 +129,15 @@
     transform: scale(1);
   }
 }
+@keyframe growInCentered {
+  from {
+    trasnform: scale(0), translateX(-50%);
+  }
+
+  to {
+    transform: scale(1), translate(-50%);
+  }
+}
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
@@ -121,25 +154,7 @@
     opacity: 1;
   }
 }
-.datetimepicker.right {
-  text-align: right;
-}
-.datetimepicker.right .picker {
-  right: 0;
-}
-.datetimepicker.center {
-  text-align: center;
-}
-.datetimepicker.center .picker {
-  left: 50%;
-  transform: translateX(-50%);
-}
-.datetimepicker.left {
-  text-align: left;
-}
-.datetimepicker.left .picker {
-  left: 0;
-}
+
 .datepicker.container {
   position: relative;
 }
