resolving circular issue

--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -109,7 +109,7 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
     transform: scale(1)
 @keyframe growInCentered
   from
-    trasnform: scale(0), translateX(-50%)
+    transform: scale(0), translateX(-50%)
   to
     transform: scale(1), translate(-50%)
 @keyframes fadeIn
