--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -17,8 +17,6 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
 
 .datetimepicker
   font-size: 1.2rem
-  // display: inline-block
-  // text-align: center
   &.right
     text-align: right
     .picker
@@ -27,24 +25,21 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
     text-align: center
     .picker
       &.ui.list, &.ui.card
-        left: 50%
-        transform: translateX(-50%)
-        animation: growInCentered 250ms $pop2, fadeIn 500ms ease-in
+        // left: 50%
+        // transform: translateX(-50%)
+        // animation: growInCentered 250ms $pop2, fadeIn 500ms ease-in
   &.left
     text-align: left
     .picker
       left: 0  
   .picker
     &.ui.list, &.ui.card
-      animation: growIn 250ms $pop2, fadeIn 500ms ease-in
-      position: absolute
-      z-index: 50
-      top: 5px
-      margin: 0
-      border-radius: 3px
-      border: 1px solid rgba(90,90,90,0.5)
-      box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
-      max-width: calc(100vw - 2rem) 
+      // animation: growIn 250ms $pop2, fadeIn 500ms ease-in
+      // margin: 0
+      // border-radius: 3px
+      // border: 1px solid rgba(90,90,90,0.5)
+      // box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
+      // max-width: calc(100vw - 2rem) 
   &.center
     .picker
       animation: growInCentered 250ms $pop2, fadeIn 500ms ease-in
@@ -80,40 +75,24 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
       background-color: white
       @extend %selectable
       padding: 0.25rem 1.5rem
+      width: 100%
+      min-width: max-content
+ 
+.ui.card
+  .content
+    .datetimepicker
+      &.left 
+        .picker
+          margin-left: -1rem
+      &.right
+        .picker
+          margin-right: -1rem
+      .picker
+        &.left-guard, &.right-guard
+          margin-left: -1rem
+          margin-right: -1rem
+
 
 .half-opacity
   opacity: 0.5
 
-.top-guard
-  top: 0 !important
-  bottom: unset !important
-.bottom-guard
-  top: unset !important
-  bottom: 0 !important
-.left-guard
-  left: 0 !important
-  right: unset !important
-.right-guard
-  left: unset !important
-  right: 0 !important
-
-@media only screen and (max-width: 320px)
-  .picker
-    max-width: 100vw !important
-    margin-left: -1rem !important
-
-@keyframe growIn
-  from
-    transform: scale(0)
-  to
-    transform: scale(1)
-@keyframe growInCentered
-  from
-    transform: scale(0), translateX(-50%)
-  to
-    transform: scale(1), translate(-50%)
-@keyframes fadeIn
-  from
-    opacity: 0    
-  to
-    opacity: 1
