--- a/datepicker.css
+++ b/datepicker.css
@@ -38,6 +38,117 @@
     font-size: 0.9em;
   }
 }
+.pop-up {
+  position: fixed;
+  display: inline-block;
+  z-index: 50;
+  -webkit-animation: growIn 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+          animation: growIn 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+  margin: 0;
+  max-width: calc(100vw - 2rem);
+  transform: translate(0, 3px);
+}
+.pop-up .ui.card {
+  margin: 0;
+}
+.center .pop-up {
+  transform: translate(-50%, 3px);
+  -webkit-animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+          animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+}
+.right .pop-up {
+  transform: translate(-100%, 3px);
+}
+.top-guard {
+  top: 1rem !important;
+  bottom: unset !important;
+}
+.bottom-guard {
+  top: unset !important;
+  bottom: 1rem !important;
+}
+.left-guard {
+  left: 1rem !important;
+  transform: translate(0, 3px) !important;
+}
+.right-guard {
+  right: 1rem !important;
+  left: unset !important;
+  transform: translate(0, 3px) !important;
+}
+@media only screen and (max-width: 400px) {
+  .center .pop-up:not(.left-guard, .right-guard) {
+    transform: translate(-50%, 3px) !important;
+  }
+
+  .pop-up {
+    max-width: calc(100vw - 2rem) !important;
+    transform: translate(0, 3px) !important;
+  }
+  .pop-up .ui.table .sizer {
+    width: -webkit-min-content !important;
+    width: -moz-min-content !important;
+    width: min-content !important;
+    margin: auto;
+    padding: 6px 2px !important;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .pop-up {
+    max-width: calc(100vw - 6px) !important;
+  }
+  .pop-up .ui.table .sizer {
+    width: unset !important;
+  }
+
+  .left-guard {
+    left: 3px !important;
+    transform: translate(0, 3px) !important;
+  }
+
+  .right-guard {
+    right: 3px !important;
+    left: unset !important;
+    transform: translate(0, 3px) !important;
+  }
+}
+@keyframe growIn {
+  from {
+    transform: scale(0);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+@keyframe growInCentered {
+  from {
+    transform: scale(0), translate(-50%, 3px);
+  }
+
+  to {
+    transform: scale(1), translate(-50%, 3px);
+  }
+}
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.timepicker {
+  position: relative;
+}
 .datetimepicker .ui.list .item, .datetimepicker .ui.cards .card {
   padding: 0.25rem 0.5rem;
   color: black;
@@ -61,39 +172,21 @@
 .datetimepicker.right {
   text-align: right;
 }
-.datetimepicker.right .picker {
-  right: 0;
-}
 .datetimepicker.center {
   text-align: center;
 }
 .datetimepicker.center .picker.ui.list, .datetimepicker.center .picker.ui.card {
-  left: 50%;
-  transform: translateX(-50%);
-  -webkit-animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
-          animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
+  border-radius: 3px;
 }
 .datetimepicker.left {
   text-align: left;
 }
-.datetimepicker.left .picker {
-  left: 0;
+.datetimepicker .picker {
+  position: relative;
+  box-shadow: 0px 0px 5px rgba(120, 120, 120, 0.5);
 }
 .datetimepicker .picker.ui.list, .datetimepicker .picker.ui.card {
-  -webkit-animation: growIn 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
-          animation: growIn 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
-  position: absolute;
-  z-index: 50;
-  top: 5px;
-  margin: 0;
   border-radius: 3px;
-  border: 1px solid rgba(90, 90, 90, 0.5);
-  box-shadow: 0px 0px 5px rgba(120, 120, 120, 0.5);
-  max-width: calc(100vw - 2rem);
-}
-.datetimepicker.center .picker {
-  -webkit-animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
-          animation: growInCentered 250ms cubic-bezier(0.76, 0.07, 0.6, 1.47), fadeIn 500ms ease-in;
 }
 .datetimepicker .clickable {
   -webkit-text-decoration: underline rgba(90, 90, 90, 0.3);
@@ -134,64 +227,11 @@
 .datetimepicker .ui.list .item {
   background-color: white;
   padding: 0.25rem 1.5rem;
+  width: 100%;
+  min-width: -webkit-max-content;
+  min-width: -moz-max-content;
+  min-width: max-content;
 }
 .half-opacity {
   opacity: 0.5;
-}
-.top-guard {
-  top: 0 !important;
-  bottom: unset !important;
-}
-.bottom-guard {
-  top: unset !important;
-  bottom: 0 !important;
-}
-.left-guard {
-  left: 0 !important;
-  transform: unset !important;
-}
-.right-guard {
-  right: 0 !important;
-  left: unset !important;
-  transform: unset !important;
-}
-@media only screen and (max-width: 320px) {
-  .picker {
-    max-width: 100vw !important;
-    margin-left: -1rem !important;
-  }
-}
-@keyframe growIn {
-  from {
-    transform: scale(0);
-  }
-
-  to {
-    transform: scale(1);
-  }
-}
-@keyframe growInCentered {
-  from {
-    transform: scale(0), translateX(-50%);
-  }
-
-  to {
-    transform: scale(1), translate(-50%);
-  }
-}
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
