--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -19,30 +19,20 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
   font-size: 1.2rem
   &.right
     text-align: right
-    .picker
-      right: 0
   &.center
     text-align: center
     .picker
       &.ui.list, &.ui.card
-        // left: 50%
-        // transform: translateX(-50%)
-        // animation: growInCentered 250ms $pop2, fadeIn 500ms ease-in
+        border-radius: 3px
   &.left
     text-align: left
-    .picker
-      left: 0  
   .picker
+    position: relative
+    box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
+
     &.ui.list, &.ui.card
-      // animation: growIn 250ms $pop2, fadeIn 500ms ease-in
-      // margin: 0
-      // border-radius: 3px
-      // border: 1px solid rgba(90,90,90,0.5)
-      // box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
-      // max-width: calc(100vw - 2rem) 
-  &.center
-    .picker
-      animation: growInCentered 250ms $pop2, fadeIn 500ms ease-in
+      border-radius: 3px
+
 
   .clickable
     text-decoration: underline rgba(90,90,90,0.3)
@@ -78,19 +68,19 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
       width: 100%
       min-width: max-content
  
-.ui.card
-  .content
-    .datetimepicker
-      &.left 
-        .picker
-          margin-left: -1rem
-      &.right
-        .picker
-          margin-right: -1rem
-      .picker
-        &.left-guard, &.right-guard
-          margin-left: -1rem
-          margin-right: -1rem
+// .ui.card
+//   .content
+//     .datetimepicker
+//       &.left 
+//         .picker
+//           margin-left: -1rem
+//       &.right
+//         .picker
+//           margin-right: -1rem
+//       .picker
+//         &.left-guard, &.right-guard
+//           margin-left: -1rem
+//           margin-right: -1rem
 
 
 .half-opacity
