--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -14,9 +14,24 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
     background-color: #2185d0 !important
     color: white !important
 
+.ui.form
+  .fields
+    .datetimepicker
+      align-self: center
 
 .datetimepicker
+  &.disabled
+    color: rgb(90,90,90)
   font-size: 1.2rem
+  margin: 0.5rem 0
+  &.inline
+    display: inline-block
+    .datepicker, .timepicker
+      display: inline-block
+      &:not(:last-child)
+        margin-right: 0.5rem
+    label
+      margin-right: 1rem
   &.right
     text-align: right
   &.center
@@ -26,6 +41,18 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
         border-radius: 3px
   &.left
     text-align: left
+  label
+    display: inline-block
+    width: auto
+    // margin-right: 1rem !important
+    vertical-align: baseline
+    font-size: .92857143em
+    font-weight: 700
+    color: rgba(0,0,0,.87)
+    text-transform: none
+  .datetime-wrapper
+    display: inline-block
+
   .picker
     position: relative
     box-shadow: 0px 0px 5px rgba(120,120,120,0.5)
@@ -68,19 +95,6 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
       width: 100%
       min-width: max-content
  
-// .ui.card
-//   .content
-//     .datetimepicker
-//       &.left 
-//         .picker
-//           margin-left: -1rem
-//       &.right
-//         .picker
-//           margin-right: -1rem
-//       .picker
-//         &.left-guard, &.right-guard
-//           margin-left: -1rem
-//           margin-right: -1rem
 
 
 .half-opacity
