--- a/src/components/shared.sass
+++ b/src/components/shared.sass
@@ -21,7 +21,9 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
 
 .datetimepicker
   &.disabled
-    color: rgb(90,90,90)
+    color: rgb(90,90,90) !important
+    opacity: 0.7 !important
+    cursor: default !important
   font-size: 1.2rem
   margin: 0.5rem 0
   &.inline
@@ -71,6 +73,8 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
       text-decoration-color: rgba(90,90,90,1)
     + .clickable:not(.compact)
       margin-left: 0.5rem
+  .ui.card
+    width: unset
   .ui.cards
     width:100%
     max-width: 20em
@@ -94,7 +98,9 @@ $pop2: cubic-bezier(0.76,0.07,0.6,1.47)
       padding: 0.25rem 1.5rem
       width: 100%
       min-width: max-content
- 
+  .ui.table
+    th, td
+      padding: 0
 
 
 .half-opacity
